# emr-management-tool

./: .gitignore  DESIGN.md  PROJECT.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.cursor/rules/: ui.md
.github/workflows/: release.yml
scripts/: prepare-release-config.mjs  publish-updater-manifest.mjs  release-version.mjs  stage-artifacts.py  validate-release-tag.mjs
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.debug.conf.json  tauri.development.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/aws/: cli_profiles.rs  credentials.rs  mod.rs  runtime.rs  s3_client.rs  s3_rules.rs
src-tauri/src/commands/: athena.rs  credentials.rs  diagnostics.rs  emr.rs  files.rs  glue.rs  job_config_templates.rs  logs.rs  mod.rs  s3.rs  system.rs  templates.rs
src-tauri/src/db/: mod.rs  repository.rs
src-tauri/src/models/: mod.rs
src/constants/: awsRegions.test.ts  awsRegions.ts
src/data/: keyboardShortcuts.test.ts  keyboardShortcuts.ts
src/hooks/: useAthena.ts  useAthenaAccountPreferences.ts  useAwsSettings.test.tsx  useAwsSettings.ts  useEmr.ts  useGlue.ts  useJobConfigTemplates.ts  useJobHistoryAutoRefresh.ts  useLogs.ts  useS3.test.tsx  useS3.ts  useS3PathPicker.ts  useSubmitJobAutoRefresh.ts  useTemplates.ts
src/lib/: keyboardShortcut.test.ts  keyboardShortcut.ts  tauriRuntime.ts
src/pages/: ApplicationConfigTemplatesPage.test.tsx  (+18 more)
(+147 files in other folders)
