[package]
name = "emr-management-tool"
version = "0.1.0"
description = "Desktop GUI for EMR on EKS job management"
authors = ["EMR Management Tool"]
edition = "2021"

[lib]
name = "emr_management_tool_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
aws-config = "1.8.18"
aws-smithy-types = "1.4.9"
aws-credential-types = "1.2.14"
aws-sdk-cloudwatchlogs = "1.135.0"
aws-sdk-emrcontainers = "1.107.0"
aws-sdk-s3 = "1.135.0"
aws-sdk-sts = "1.106.0"
aws-types = "1.3.16"
chrono = { version = "0.4.45", features = ["serde"] }
dirs = "6.0.0"
flate2 = "1.1.9"
keyring = "4.0.1"
keyring-core = "1.0.0"
rfd = "0.16.0"
serde = { version = "1.0.228", features = ["derive"] }
urlencoding = "2.1.3"
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "sqlite", "chrono"] }
tauri = { version = "2.11.2", features = [] }
tauri-plugin-store = "2.4.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
tauri-plugin-updater = "2.10.1"
